--- a/PFE/latex/chap6.tex
+++ b/PFE/latex/chap6.tex
@@ -25,7 +25,7 @@ Paperspace is a high-performance cloud computing and ML development platform for
 \section{Experiments and Results}
 
 \subsection{Red Blood Cells}
-\subsubsection{DO-UNET}
+\subsubsection{DO-U-Net}
 %TODO we will have a table which has accuracy and metrics for example 10 images and their real and predicted count with the 3 methods
 %example of table columns
 % Image Results(Metrics IOU ...) Real-Count CHT CCL Watershed
@@ -35,14 +35,14 @@ Paperspace is a high-performance cloud computing and ML development platform for
 
 \subsection{White Blood Cells}
 %TODO Same
-\subsubsection{DO-UNET}
-\subsubsection{DO-SegNET}
+\subsubsection{DO-U-Net}
+\subsubsection{DO-SegNet}
 
 
 \subsection{Platlets}
 %TODO Same
-\subsubsection{DO-UNET}
-\subsubsection{DO-SegNET}
+\subsubsection{DO-U-Net}
+\subsubsection{DO-SegNet}
 
 %TODO at the end we draw some tables that will contain the 3 
 
