added table7 generator script!

--- a/PFE/latex/chap6.tex
+++ b/PFE/latex/chap6.tex
@@ -46,6 +46,9 @@ Paperspace is a high-performance cloud computing and ML development platform for
 
 %TODO at the end we draw some tables that will contain the 3 
 
-\subsection{}
+\section{Results}
 \vspace{0.2in}
 \hspace*{0.16in}
+
+\input{tables/table7.tex}
+
