--- a/PFE/latex/main.tex
+++ b/PFE/latex/main.tex
@@ -507,20 +507,27 @@ This thesis is presented in four chapters:\\
 \addcontentsline{toc}{chapter}{\color{Black}{Chapter V : Experiments And Results}}
 \setcounter{section}{0}
 
+\newpage
+
 \input{chap6.tex}
 
 \newpage
 
-\vspace*{\fill}
+\vspace*{0.2in}
+
+\thispagestyle{empty}
+
 \begin{center}
-    {\color{Black} \rule{5.5in}{1.4mm} }\\
+    {\color{Black} \rule{4in}{1.4mm} }\\
     \vspace{0.1in}
-    \scshape{\fontsize{34}{46}{\bfseries{\color{Black}{General Conclusion}}}}
+    \scshape{\fontsize{34}{46}{\bfseries{\color{Black}{Conclusion}}}}
     \\
-    \vspace{0.5in}
+    \vspace{0.6in}
 \end{center}
-\addcontentsline{toc}{chapter}{\vspace{-0.12in}\color{Black}{General Conclusion}}
+\cftaddtitleline{toc}{part}{\vspace{-0.12in}\color{Black}{Conclusion}}{}
+\begin{changemargin}{0.9cm}{0.9cm}
 \hspace*{0.16in}
+\end{changemargin}
 
 \newpage
 
