--- a/PFE/latex/chap6.tex
+++ b/PFE/latex/chap6.tex
@@ -1,12 +1,11 @@
 \section{Introduction}
 \vspace{0.2in}
 \hspace*{0.16in}
-%TODO explain what we tested with steps 
+For this chapter, we will present the tools we used and our results of segmenting and counting blood cells (red, white, platelets).
 
 \section{Used Tools}
 \vspace{0.2in}
 \hspace*{0.16in}
-
 
 \subsection{TensorFlow}
 In our work we used TensorFlow which is an open source library developed by Google Brain Team for Artificial Intelligence, it contains multiple pre-defined models and algorithms for Deep Learning and Machine Learning, tensorFlow can be used in multiple languages as python, C++, Java and JavaScript.\\
