added two tables RBC and WBC

--- a/PFE/latex/chap6.tex
+++ b/PFE/latex/chap6.tex
@@ -15,7 +15,7 @@ Keras is a high level API for Neural Networks which helps with experiments on th
 \begin{figure}[H]
     \centering
       \vspace{-0.1in}
-        \centerline{\includegraphics[width = 3in, height = 1.4in]{../images/tensorflow.png}}
+        \centerline{\includegraphics[width = 3in]{../images/tensorflow.png}}
         \caption{Tensorflow}
         \label{Tensorflow}
     \end{figure}
@@ -28,7 +28,7 @@ and non presistant storage.
 \begin{figure}[H]
 \centering
   \vspace{-0.1in}
-    \centerline{\includegraphics[width = 2in, height = 1in]{../images/colab.png}}
+    \centerline{\includegraphics[width = 2in]{../images/colab.png}}
     \caption{Google Colab}
     \label{Google Colab}
 \end{figure}
@@ -39,7 +39,7 @@ Paperspace is a high-performance cloud computing and ML development platform for
 \begin{figure}[H]
     \centering
       \vspace{-0.1in}
-        \centerline{\includegraphics[width = 3in, height = 1.2in]{../images/paperspace.png}}
+        \centerline{\includegraphics[width = 3in]{../images/paperspace.png}}
         \caption{Paperspace}
         \label{Paperspace}
     \end{figure}
@@ -52,12 +52,18 @@ Paperspace is a high-performance cloud computing and ML development platform for
 %example of table columns
 % Image Results(Metrics IOU ...) Real-Count CHT CCL Watershed
 
-\subsection{DO-SegNet}
+\input{latex/tables/RBC_DOUNET}
+
+
+\subsubsection{DO-SegNet}
 %TODO we will do the same thing as DO-UNET and at the end we draw a resume table wich will compare between both/ or we can do both in the same table 
 
 \subsection{White Blood Cells}
 %TODO Same
 \subsubsection{DO-U-Net}
+
+\input{latex/tables/WBC_DOUNET}
+
 \subsubsection{DO-SegNet}
 
 
