--- a/PFE/latex/chap6.tex
+++ b/PFE/latex/chap6.tex
@@ -49,29 +49,29 @@ Paperspace is a high-performance cloud computing and ML development platform for
 %example of table columns
 % Image Results(Metrics IOU ...) Real-Count CHT CCL Watershed
 
-\input{latex/tables/RBC_DOUNET}
+% \input{tables/RBC_DOUNET}
 
 \subsubsection{DO-SegNet}
 %TODO we will do the same thing as DO-UNET and at the end we draw a resume table wich will compare between both/ or we can do both in the same table 
 
-% \input{latex/tables/rbc_segnet}
+\input{tables/rbc_segnet.tex}
 
 \subsection{White Blood Cells}
 %TODO Same
 \subsubsection{DO-U-Net}
 
-\input{latex/tables/WBC_DOUNET}
+% \input{tables/WBC_DOUNET}
 
 \subsubsection{DO-SegNet}
 
-% \input{latex/tables/wbc_segnet}
+% \input{tables/wbc_segnet}
 
 \subsection{Platlets}
 %TODO Same
 \subsubsection{DO-U-Net}
 \subsubsection{DO-SegNet}
 
-% \input{latex/tables/plt_segnet}
+% \input{tables/plt_segnet}
 
 %TODO at the end we draw some tables that will contain the 3 
 
