updated wbc-segnet table!

--- a/PFE/latex/chap6.tex
+++ b/PFE/latex/chap6.tex
@@ -64,7 +64,7 @@ Paperspace is a high-performance cloud computing and ML development platform for
 
 \subsubsection{DO-SegNet}
 
-% \input{tables/wbc_segnet}
+\input{tables/wbc_segnet.tex}
 
 \subsection{Platlets}
 %TODO Same
