Default commit message!

--- a/PFE/latex/chap6.tex
+++ b/PFE/latex/chap6.tex
@@ -96,7 +96,7 @@ After training the model we did a benchmark on the 13 images then on the complet
 
 \subsubsection{do-SegNet}
 
-% \input{tables/wbc_segnet}
+\input{tables/wbc_segnet.tex}
 
 \subsection{Platlets}
 %TODO Same
