--- a/PFE/latex/chap6.tex
+++ b/PFE/latex/chap6.tex
@@ -89,7 +89,7 @@ We ended up with a very high accuracy and IOU score as we can see in table \ref{
 
 \input{tables/UNet-WBC-Training.tex}
 
-\subsubsection{DO-U-Net}
+\subsubsection{do-U-Net}
 After training the model we did a benchmark on the 13 images then on the complete database (108 images) to calculate the counting accuracy of the three methods, we ended up with the table \ref{table:UNet-WBC} below where we can see that the watershed method is the best for WBC counting with 97.94 accuracy on the 13 images and 95.64 on the complete database, because the white blood cells always slightly overlap each other where it's easy to the watershed to segment them.
 
 \input{tables/WBC_DOUNET.tex}
