updated table generator script to add caption!

--- a/PFE/latex/chap6.tex
+++ b/PFE/latex/chap6.tex
@@ -98,7 +98,7 @@ The segmented output of do-SegNet is thresholded using a binary threshold, and t
 \subsection{Platlets}
 %TODO Same
 
-% \input{tables/plt_segnet}
+\input{tables/plt_segnet.tex}
 
 %TODO at the end we draw some tables that will contain the 3 
 
