--- a/PFE/latex/tables/rbc_segnet.tex
+++ b/PFE/latex/tables/rbc_segnet.tex
@@ -20,6 +20,6 @@
 
 \hline
 \end{tabular}
-\caption{Results of each algorithm}
-\label{Results of each algorithm}
+\caption{Results of rbc segnet}
+\label{Results of rbc segnet}
 \end{table}
