updated segnet intro!

--- a/PFE/latex/chap6.tex
+++ b/PFE/latex/chap6.tex
@@ -74,7 +74,8 @@ After training the model we did a benchmark on the 13 images then on the complet
 \input{tables/WBC_DOUNET.tex}
 
 \section{SegNet}
-% TODO do-U-net definition, how many layers, concatenation and number of paramters, also the benefits...
+SegNet segmentation results were pretty accurate for white blood cells and platelets, as for red blood cells, the segmentation was done using dual output (mask and edge-mask) to get rid of overlapped cells.\\
+Here are the results of the Mean Squared Error (MSE) loss function on each type of cell:
 
 \input{tables/segnet.tex}
 
