added white blood cells - SegNet!

--- a/PFE/latex/chap6.tex
+++ b/PFE/latex/chap6.tex
@@ -96,7 +96,7 @@ The segmented output of do-SegNet is thresholded using a binary threshold, and t
 \subsection{White Blood Cells}
 The results of white blood cells segmentation and counting using the SegNet model was very accurate achieving 99.72\% when segmenting.
 White blood cells are the easiest out of the three, and the most accurate results.
-However, white blood cells are different from the other cells because they come in different shapes and sizes, which made it hard to adapt each counting algorithm to every cell.
+However, white blood cells are different from the other cells because they come in different shapes and sizes, which made it hard to adapt each counting algorithm to every cell.\
 The same counting methods are applied CHT, CCL and EDT. And each method had some drawbacks.\\
 here are the results:
 
