updated white blood cells - SegNet

--- a/PFE/latex/chap6.tex
+++ b/PFE/latex/chap6.tex
@@ -108,6 +108,8 @@ here are the results:
     This method achived a counting accuracy of 96.43\%.
 \end{itemize}
 
+Here are the results of the 13 images:
+
 \input{tables/wbc_segnet.tex}
 
 \subsection{Platlets}
