--- a/PFE/latex/chap6.tex
+++ b/PFE/latex/chap6.tex
@@ -41,7 +41,7 @@ Paperspace is a high-performance cloud computing and ML development platform for
         \label{Paperspace}
     \end{figure}
 
-\section{do-U-Net}
+\section{do-U-Net Results}
 % TODO do-U-net definition, how many layers, concatenation and number of paramters, also the benefits...
 
 \subsection{Red Blood Cells}
@@ -73,7 +73,7 @@ After training the model we did a benchmark on the 13 images then on the complet
 
 \input{tables/WBC_DOUNET.tex}
 
-\section{SegNet}
+\section{SegNet Results}
 % TODO do-U-net definition, how many layers, concatenation and number of paramters, also the benefits...
 
 \subsection{Red Blood Cells}
