--- a/PFE/latex/tables/rbc_segnet.tex
+++ b/PFE/latex/tables/rbc_segnet.tex
@@ -2,7 +2,7 @@
 \centering
 \begin{tabular}{|c|c|c|c|c|c|c|c|}
 \hline
- \textbf{Image} & \textbf{Real\_Count} & \textbf{CHT} & \textbf{CCL} & \textbf{EDT} & \textbf{CHT\_acc} & \textbf{CCL\_acc} & \textbf{EDT\_acc} \\ \hline
+ \textbf{Image} & \textbf{Real\_Count} & \textbf{CHT} & \textbf{CCL} & \textbf{EDT} & \textbf{CHT\_Accuracy} & \textbf{CCL\_Accuracy} & \textbf{EDT\_Accuracy} \\ \hline
  Im001\_1 & 215 & 212 & 234 & 247 & 98.6 & 91.16 & 85.12 \\ 
  Im004\_1 & 258 & 255 & 264 & 285 & 98.84 & 97.67 & 89.53 \\ 
  Im015\_1 & 293 & 269 & 212 & 261 & 91.81 & 72.35 & 89.08 \\ 
@@ -16,7 +16,7 @@
  Im095\_0 & 150 & 177 & 177 & 170 & 82.0 & 82.0 & 86.67 \\ 
  Im099\_0 & 528 & 516 & 437 & 465 & 97.73 & 82.77 & 88.07 \\ 
  Im108\_0 & 510 & 528 & 418 & 458 & 96.47 & 81.96 & 89.8 \\ \hline
- Total & -1 & -1 & -1 & -1 & 94.03 & 76.49 & 84.64 \\ 
+ Total &  &   &   &   & 94.03 & 76.49 & 84.64 \\ 
 
 \hline
 \end{tabular}
