--- a/PFE/latex/main.tex
+++ b/PFE/latex/main.tex
@@ -222,7 +222,7 @@
 \hspace*{0.16in}
 \end{changemargin}
 
-Le comptage de cellules est une tâche fastidieuse qui bénéficierait grandement de l'automatisation. Le comptage précis des cellules fournit des informations quantitatives essentielles et joue un rôle clé dans la recherche biologique ainsi que dans les applications industrielles et biomédicales. Malheureusement, la méthode de comptage manuel couramment utilisée demande beaucoup de temps, mal standardisée et n'est pas reproductible. La tâche est rendue encore plus difficile par le chevauchement des cellules. la mauvaise qualité de l'imagerie ... , nous décrivons ici un réseau de neurones convolutionnel qui vas segmenter les cellules comme une première phase, et les compter dans la seconde phase.
+Le comptage de cellules est une tâche fastidieuse qui bénéficierait grandement de l'automatisation. Le comptage précis des cellules CBC (Complete Blood Count) fournit des informations quantitatives essentielles et joue un rôle clé dans la recherche biologique ainsi que dans les applications industrielles et biomédicales. Malheureusement, la méthode de comptage manuel couramment utilisée demande beaucoup de temps, mal standardisée et n'est pas reproductible. La tâche est rendue encore plus difficile par le chevauchement des cellules. la mauvaise qualité de l'imagerie ... , nous comparons ici deux réseaux de neurones convolutionnels qui vont segmenter les globules globules (rouges, blancs et plaquettes) comme une première phase, et les compter dans la seconde phase en utilisant 3 algorithmes (Watershed, Connected Component Labeling et Circle Hough Transform).
 
 \vspace{1in}
 
@@ -247,7 +247,7 @@ Mots clés : CNN, Comptage des cellules, segmentation d'image
 \begin{changemargin}{0.9cm}{0.9cm}
 \hspace*{0.16in}
 
-Cell counting is a tedious task that would benefit greatly from automation. Accurate cell counting provides essential quantitative information and plays a key role in biological research as well as industrial and biomedical applications. Unfortunately, the commonly used manual counting method is time consuming, poorly standardized and not reproducible. The task is made even more difficult by overlapping cells and poor imaging quality. In this paper we describe a convolutional neural network that will segment the cells as a first phase, and count them in the second phase.
+Cell counting is a tedious task that would benefit greatly from automation. Accurate cell counting CBC (Complete Blood Count) provides essential quantitative information and plays a key role in biological research as well as industrial and biomedical applications. Unfortunately, the commonly used manual counting method is time consuming, poorly standardized and not reproducible. The task is made even more difficult by overlapping cells and poor imaging quality. In this paper we compare between two convolutional neural networks that will segment the cells as a first phase, then count them in the second phase using 3 diffrent algorithms (Watershed, Connected Component Labeling et Circle Hough Transform).
 
 \end{changemargin}
 
@@ -299,7 +299,9 @@ Keywords: CNN, cell segmentation, cell counting, convolutional neural networks
 Blood carries out many vital functions as it circulates through the body. It transports oxygen from the lungs to other body tissues and carries away carbon dioxide. It carries nutrients from the digestive system to the cells of the body, and carries away wastes for excretion by the kidneys. Blood helps our body fight off infectious agents and inactivates toxins, stops bleeding through its clotting ability, and regulates our body temperature. Doctors rely on many blood tests to diagnose and monitor diseases. Some tests measure the components of blood itself; others examine substances found in the blood to identify abnormal functioning of various organs. Hence, we here propose a software system which will assist pathologists to detect blood cell count and help to find out the diseases. This information can be very helpful to a physician who, for example, is trying to identify the cause of a patient's diseases.
 
 Earlier hematologists were performing microscopic Copied selected text to selection primary: examination and counting of blood cells manually, which  was very time-consuming and tedious process. Also, the accuracy of counting mainly depends on their expertise skill and their physical conditions, and because of cells complex nature, it still remains a challenging task to segment cells from its background and count them automatically.\\
-<--- --->\\
+Our work is to automate the task of cell counting, we will  try to find the best solution to preform the complete blood count (CBC), The solution is devided on two parts.
+The first part is the segmentation where we need to segment the image to remove the noise and get a clear mask on which we are going preform the counting.In this phase we are comparing between two convolutional neural networks U-Net and SegNet.
+The second part is the counting phase in which we will take  the output mask from the first phase and apply counting algorimths on it. We used 3 algorithms to count the cells Watershed, Connected Component Labeling, Circle Hough transform.
 
 This thesis is presented in four chapters:\\
 
