--- a/PFE/latex/tables/rbc_segnet.tex
+++ b/PFE/latex/tables/rbc_segnet.tex
@@ -1,25 +1,26 @@
 \begin{table}[H]
-\centering
-\begin{tabular}{|c|c|c|c|c|c|c|c|}
-\hline
- \textbf{Image} & \textbf{Real\_Count} & \textbf{CHT} & \textbf{CCL} & \textbf{EDT} & \textbf{CHT\_Accuracy} & \textbf{CCL\_Accuracy} & \textbf{EDT\_Accuracy} \\ \hline
- Im001\_1 & 215 & 212 & 234 & 247 & 98.6 & 91.16 & 85.12 \\ 
- Im004\_1 & 258 & 255 & 264 & 285 & 98.84 & 97.67 & 89.53 \\ 
- Im015\_1 & 293 & 269 & 212 & 261 & 91.81 & 72.35 & 89.08 \\ 
- Im022\_1 & 242 & 232 & 279 & 268 & 95.87 & 84.71 & 89.26 \\ 
- Im037\_0 & 105 & 103 & 75 & 88 & 98.1 & 71.43 & 83.81 \\ 
- Im045\_0 & 601 & 576 & 409 & 480 & 95.84 & 68.05 & 79.87 \\ 
- Im050\_1 & 460 & 486 & 450 & 475 & 94.35 & 97.83 & 96.74 \\ 
- Im053\_1 & 802 & 614 & 228 & 448 & 76.56 & 28.43 & 55.86 \\ 
- Im069\_0 & 665 & 653 & 376 & 549 & 98.2 & 56.54 & 82.56 \\ 
- Im079\_0 & 512 & 502 & 407 & 430 & 98.05 & 79.49 & 83.98 \\ 
- Im095\_0 & 150 & 177 & 177 & 170 & 82.0 & 82.0 & 86.67 \\ 
- Im099\_0 & 528 & 516 & 437 & 465 & 97.73 & 82.77 & 88.07 \\ 
- Im108\_0 & 510 & 528 & 418 & 458 & 96.47 & 81.96 & 89.8 \\ \hline
- Total &  &   &   &   & 94.03 & 76.49 & 84.64 \\ 
-
-\hline
-\end{tabular}
-\caption{Results of rbc segnet}
-\label{Results of rbc segnet}
-\end{table}
+    \centering
+    \begin{tabular}{|c|c|c|c|c|c|c|c|}
+    \hline
+     \textbf{Image} & \textbf{Real\_Count} & \textbf{CHT} & \textbf{CCL} & \textbf{EDT} & \textbf{CHT\_acc} & \textbf{CCL\_acc} & \textbf{EDT\_acc} \\ \hline
+     Im001\_1 & 215 & 212 & 234 & 247 & 98.6 & 91.16 & 85.12 \\ 
+     Im004\_1 & 258 & 255 & 264 & 285 & 98.84 & 97.67 & 89.53 \\ 
+     Im015\_1 & 293 & 269 & 212 & 261 & 91.81 & 72.35 & 89.08 \\ 
+     Im022\_1 & 242 & 232 & 279 & 268 & 95.87 & 84.71 & 89.26 \\ 
+     Im037\_0 & 105 & 103 & 75 & 88 & 98.1 & 71.43 & 83.81 \\ 
+     Im045\_0 & 601 & 576 & 409 & 480 & 95.84 & 68.05 & 79.87 \\ 
+     Im050\_1 & 460 & 486 & 450 & 475 & 94.35 & 97.83 & 96.74 \\ 
+     Im053\_1 & 802 & 614 & 228 & 448 & 76.56 & 28.43 & 55.86 \\ 
+     Im069\_0 & 665 & 653 & 376 & 549 & 98.2 & 56.54 & 82.56 \\ 
+     Im079\_0 & 512 & 502 & 407 & 430 & 98.05 & 79.49 & 83.98 \\ 
+     Im095\_0 & 150 & 177 & 177 & 170 & 82.0 & 82.0 & 86.67 \\ 
+     Im099\_0 & 528 & 516 & 437 & 465 & 97.73 & 82.77 & 88.07 \\ 
+     Im108\_0 & 510 & 528 & 418 & 458 & 96.47 & 81.96 & 89.8 \\ \hline
+     Total & -1 & -1 & -1 & -1 & 94.03 & 76.49 & 84.64 \\ 
+    
+    \hline
+    \end{tabular}
+    \caption{Results of rbc segnet}
+    \label{Results of rbc segnet}
+    \end{table}
+    
