--- a/PFE/latex/tables/wbc_segnet.tex
+++ b/PFE/latex/tables/wbc_segnet.tex
@@ -1,26 +1,25 @@
 \begin{table}[H]
-    \centering
-    \begin{tabular}{|c|c|c|c|c|c|c|c|}
-    \hline
-     \textbf{Image} & \textbf{Real\_Count} & \textbf{CHT} & \textbf{CCL} & \textbf{EDT} & \textbf{CHT\_acc} & \textbf{CCL\_acc} & \textbf{EDT\_acc} \\ \hline
-     Im001\_1 & 18 & 13 & 13 & 16 & 72.22 & 72.22 & 88.89 \\ 
-     Im004\_1 & 12 & 11 & 9 & 12 & 91.67 & 75.0 & 100.0 \\ 
-     Im015\_1 & 22 & 18 & 15 & 21 & 81.82 & 68.18 & 95.45 \\ 
-     Im022\_1 & 5 & 5 & 5 & 5 & 100.0 & 100.0 & 100.0 \\ 
-     Im037\_0 & 1 & 0 & 1 & 1 & 0 & 100.0 & 100.0 \\ 
-     Im045\_0 & 1 & 1 & 1 & 1 & 100.0 & 100.0 & 100.0 \\ 
-     Im050\_1 & 21 & 29 & 20 & 21 & 61.9 & 95.24 & 100.0 \\ 
-     Im053\_1 & 45 & 44 & 43 & 44 & 97.78 & 95.56 & 97.78 \\ 
-     Im069\_0 & 1 & 1 & 1 & 1 & 100.0 & 100.0 & 100.0 \\ 
-     Im079\_0 & 7 & 7 & 9 & 9 & 100.0 & 71.43 & 71.43 \\ 
-     Im095\_0 & 2 & 2 & 2 & 2 & 100.0 & 100.0 & 100.0 \\ 
-     Im099\_0 & 3 & 1 & 3 & 3 & 33.33 & 100.0 & 100.0 \\ 
-     Im108\_0 & 4 & 4 & 8 & 4 & 100.0 & 0 & 100.0 \\ \hline
-     Total & -1 & -1 & -1 & -1 & 79.9 & 82.89 & 96.43 \\ 
-    
-    \hline
-    \end{tabular}
-    \caption{Results of wbc segnet}
-    \label{Results of wbc segnet}
-    \end{table}
-    
+\centering
+\begin{tabular}{|c|c|c|c|c|c|c|c|}
+\hline
+ \textbf{Image} & \textbf{Real\_Count} & \textbf{CHT} & \textbf{CCL} & \textbf{EDT} & \textbf{CHT\_Accuracy} & \textbf{CCL\_Accuracy} & \textbf{EDT\_Accuracy} \\ \hline
+ Im001\_1 & 18 & 13 & 13 & 16 & 72.22 & 72.22 & 88.89 \\ 
+ Im004\_1 & 12 & 11 & 9 & 12 & 91.67 & 75.0 & 100.0 \\ 
+ Im015\_1 & 22 & 18 & 15 & 21 & 81.82 & 68.18 & 95.45 \\ 
+ Im022\_1 & 5 & 5 & 5 & 5 & 100.0 & 100.0 & 100.0 \\ 
+ Im037\_0 & 1 & 0 & 1 & 1 & 0 & 100.0 & 100.0 \\ 
+ Im045\_0 & 1 & 1 & 1 & 1 & 100.0 & 100.0 & 100.0 \\ 
+ Im050\_1 & 21 & 29 & 20 & 21 & 61.9 & 95.24 & 100.0 \\ 
+ Im053\_1 & 45 & 44 & 43 & 44 & 97.78 & 95.56 & 97.78 \\ 
+ Im069\_0 & 1 & 1 & 1 & 1 & 100.0 & 100.0 & 100.0 \\ 
+ Im079\_0 & 7 & 7 & 9 & 9 & 100.0 & 71.43 & 71.43 \\ 
+ Im095\_0 & 2 & 2 & 2 & 2 & 100.0 & 100.0 & 100.0 \\ 
+ Im099\_0 & 3 & 1 & 3 & 3 & 33.33 & 100.0 & 100.0 \\ 
+ Im108\_0 & 4 & 4 & 8 & 4 & 100.0 & 0 & 100.0 \\ \hline
+ Total & -1 & -1 & -1 & -1 & 79.9 & 82.89 & 96.43 \\ 
+
+\hline
+\end{tabular}
+\caption{Results of wbc segnet}
+\label{Results of wbc segnet}
+\end{table}
