--- a/PFE/latex/chap6.tex
+++ b/PFE/latex/chap6.tex
@@ -113,11 +113,11 @@ Here are the results of the 13 images:
 \input{tables/wbc_segnet.tex}
 
 \subsection{Platlets}
-%TODO Same
+The platelets segmentation result we achieved is not the best compared to the do-U-Net model. Segnet extracts the platelets but with some noise which made it very hard to count accurately.
+It achieved a segmetation accuracy of xx.xx\% and the highest counting accuracy is 71.56\% which is not very good.\\
+Here are all the counting accuracies for each approach:
 
 \input{tables/plt_segnet.tex}
-
-%TODO at the end we draw some tables that will contain the 3 
 
 \section{Results}
 \vspace{0.2in}
