--- a/PFE/latex/main.tex
+++ b/PFE/latex/main.tex
@@ -406,12 +406,12 @@ This thesis is presented in four chapters:\\
 \begin{center}
     {\color{Black} \rule{\linewidth}{1.2mm} }\\
 \vspace{0.25in}
-{\centering\fontsize{30}{40}{\bfseries{\color{Black}{\scshape{Chapter V : Experiments And Results}}}}}
+{\centering\fontsize{30}{40}{\bfseries{\color{Black}{\scshape{Chapter VI : Experiments And Results}}}}}
 \vspace{0.35in}\\
     {\color{Black} \rule{\linewidth}{1.2mm} }
 \end{center}
 \vspace*{\fill}
-\addcontentsline{toc}{chapter}{\color{Black}{Chapter V : Experiments And Results}}
+\addcontentsline{toc}{chapter}{\color{Black}{Chapter VI : Experiments And Results}}
 \setcounter{section}{0}
 
 \newpage
