added dedication and acknowledgment template.

--- a/PFE/latex/chap6.tex
+++ b/PFE/latex/chap6.tex
@@ -98,7 +98,7 @@ The results of white blood cells segmentation and counting using the SegNet mode
 White blood cells are the easiest out of the three, and the most accurate results.
 However, white blood cells are different from the other cells because they come in different shapes and sizes, which made it hard to adapt each counting algorithm to every cell.\
 The same counting methods are applied CHT, CCL and EDT. And each method had some drawbacks.\\
-here are the results:
+Here are the results:
 
 \begin{itemize}
   \item \textbf{Circle Hough Transform}: Due to the different shapes of white blood cells, CHT achieved the lowest result which is 79.9\% counting accuracy, because some of the cells don't even look like circles and also their differet size which made it harder to count.
