--- a/PFE/latex/main.tex
+++ b/PFE/latex/main.tex
@@ -206,6 +206,14 @@
 
 \newpage
 
+\input{dedication.tex}
+
+\newpage
+
+\input{acknowledgment.tex}
+
+\newpage
+
 \vspace*{0.2in}
 
 \thispagestyle{empty}
