--- a/PFE/latex/dedication.tex
+++ b/PFE/latex/dedication.tex
@@ -13,15 +13,18 @@
     %\color{Red}{\large\textbf{{\lipsum[1-2]}}}
     % Taleb Zineb
     \itshape
-    \Large{\underline{Je dédie ce travail a :}}\\          \textbf{\large{À mon cher père Abd laziz,}}\\\vspace{-0.1in}
-    \textbf{\large{À ma chère mère Zohra,}}\\
-    \large{Qui n'ont jamais cessé, de formuler des prières à mon égard, de me soutenir\\\vspace{-0.1in}et de m'épauler pour que je puisse atteindre mes objectifs.}\\
-    \textbf{\large{À mes deux chères sœurs Asma et Amel,}}\\
-    \large{Pour leur soutien et leurs conseils précieux tout aux long de mes études.}\\
-    \textbf{\large{À mes chers amis et mon binôme Amine,}}\\
-    \large{Pour leur aide et supporte dans les moments difficiles.}\\
-    \textbf{\large{À toute ma famille, à tous ceux que j’aime.}}\\\vspace{0.1in}
-    \hfill\textbf{\Large{Taleb Zineb}}
+    \Large{\underline{I dedicate this work to:}}\\          \textbf{\large{To my dear mother Fatma,}}\\\vspace{-0.1in}
+    \textbf{\large{And to my dear father Khelifa,}}\\
+    \large{Who have stood by me every step of the way\\\vspace{-0.1in}And motivated me to achieve many goals.}\\
+    \textbf{\large{To my dear sister Maria,}}\\
+    \large{For her advices throughout my journey.}\\
+    \textbf{\large{To all my dear friends and my partner Aghiles,}}\\
+    \large{For their help and support.}\\
+    \textbf{\large{To my professor Touazi.}}\\
+    \large{For providing all their help needed.}\\
+    \textbf{\large{And my professor Yagoubi.}}\\
+    \large{For accepting to be our examiner.}\\
+    \hfill\textbf{\Large{Neggazi Mohamed Lamine}}
 
     \vspace{0.4in}
     %\color{Red}{\large\textbf{{\lipsum[1-2]}}}
