--- a/PFE/latex/acknowledgment.tex
+++ b/PFE/latex/acknowledgment.tex
@@ -6,13 +6,13 @@
     \textit{\fontsize{34}{46}{\bfseries{\color{Black}{Acknowledgment}}}}
     \vspace{0.7in}
     \textit{
-    \\\large{<< Nous tenons tout d’abord à remercier Dieu de nous avoir donné le courage et la patience pour accomplir ce travail >>}
+    \\\large{<< First of all, we would like to thank God for giving us the courage and patience to accomplish this work. >>}
     \vspace{0.4in}
-    \\\large{<< Nous tenons à exprimer notre grand remerciement à nos très chers parents pour leur soutien moral et leur encouragement >>}
+    \\\large{<< We would like to express our great thanks to our dear parents for their moral support and encouragement. >>}
     \vspace{0.4in}
-    \\\large{<< Nous adressons nos sincères remerciements à Monsieur Youcef Yahiatene qui nous a confié ce sujet et qui a assumé l’encadrement de notre projet, l’intérêt qu’il a porté à notre travail, sa bienveillance, sa rigueur scientifique, ses hautes qualités humaines, ont constitué une aide précieuse et nous a permis de mener à terme ce travail >>}
+    \\\large{<< We address our sincere thanks to Mr. Faycal Touazi who entrusted us with this subject and who assumed the supervision of our project, the interest he showed in our work, his benevolence, his scientific rigor, his high human qualities, constituted a precious help and allowed us to carry out this work. >>}
     \vspace{0.4in}
-    \\\large{<< Enfin, mes remerciements s’adressent aussi à tous ceux qui ont participé, de près ou de loin, à l’élaboration de ce projet de fin d’études et en particulier à ma famille et mes amis >>}
+    \\\large{<< Finally, thank you to Mr. Yagoubi and Mr. Rahmoune for accepting to be our jury, and Thanks are also addressed to all those who participated, directly or indirectly, in the development of this end-of-studies project and in particular to my family and my friends >>}
     \\}
 \end{center}
 %\cftaddtitleline{toc}{part}{\vspace{-0.12in}\color{Blue}{Remerciement}}{}
