--- a/PFE/latex/dedication.tex
+++ b/PFE/latex/dedication.tex
@@ -22,8 +22,6 @@
     \large{For their help and support.}\\
     \textbf{\large{To my professor Touazi.}}\\
     \large{For providing all their help needed.}\\
-    \textbf{\large{And my professor Yagoubi.}}\\
-    \large{For accepting to be our examiner.}\\
     \hfill\textbf{\Large{Neggazi Mohamed Lamine}}
 
     \vspace{0.4in}
@@ -38,7 +36,7 @@
     \textbf{\large{À mes chers amis et mon binôme Zineb,}}\\
     \large{Pour leur aide et supporte dans les moments difficiles.}\\
     \textbf{\large{À toute ma famille, à tous ceux que j’aime.}}\\\vspace{0.1in}
-    \hfill\textbf{\Large{Neggazi Mohamed Lamine}}
+    \hfill\textbf{\Large{Gharbi Aghiles}}
 
 \end{center}
 
