--- a/PFE/latex/main.tex
+++ b/PFE/latex/main.tex
@@ -214,56 +214,11 @@
 
 \newpage
 
-\vspace*{0.2in}
-
-\thispagestyle{empty}
-
-\begin{center}
-    {\color{Black} \rule{3in}{1.4mm} }\\
-    \vspace{0.1in}
-    \scshape{\fontsize{34}{46}{\bfseries{\color{Black}{Résumé}}}}
-    \\
-    \vspace{0.6in}
-\end{center}
-\cftaddtitleline{toc}{part}{\vspace{-0.12in}\color{Black}{Résumé}}{}
-\begin{changemargin}{0.9cm}{0.9cm}
-\hspace*{0.16in}
-\end{changemargin}
-
-Le comptage de cellules est une tâche fastidieuse qui bénéficierait grandement de l'automatisation. Le comptage précis des cellules CBC (Complete Blood Count) fournit des informations quantitatives essentielles et joue un rôle clé dans la recherche biologique ainsi que dans les applications industrielles et biomédicales. Malheureusement, la méthode de comptage manuel couramment utilisée demande beaucoup de temps, mal standardisée et n'est pas reproductible. La tâche est rendue encore plus difficile par le chevauchement des cellules. la mauvaise qualité de l'imagerie ... , nous comparons ici deux réseaux de neurones convolutionnels qui vont segmenter les globules globules (rouges, blancs et plaquettes) comme une première phase, et les compter dans la seconde phase en utilisant 3 algorithmes (Watershed, Connected Component Labeling et Circle Hough Transform).
-
-\vspace{1in}
-
-\begin{changemargin}{0.9cm}{0.9cm}
-Mots clés : CNN, Comptage des cellules, segmentation d'image
-\end{changemargin}
+\input{abstract.tex}
 
 \newpage
 
-\vspace*{0.2in}
-
-\thispagestyle{empty}
-
-\begin{center}
-    {\color{Black} \rule{3in}{1.4mm} }\\
-    \vspace{0.1in}
-    \scshape{\fontsize{34}{46}{\bfseries{\color{Black}{Abstract}}}}
-    \\
-    \vspace{0.6in}
-\end{center}
-\cftaddtitleline{toc}{part}{\vspace{-0.12in}\color{Black}{Abstract}}{}
-\begin{changemargin}{0.9cm}{0.9cm}
-\hspace*{0.16in}
-
-Cell counting is a tedious task that would benefit greatly from automation. Accurate cell counting CBC (Complete Blood Count) provides essential quantitative information and plays a key role in biological research as well as industrial and biomedical applications. Unfortunately, the commonly used manual counting method is time consuming, poorly standardized and not reproducible. The task is made even more difficult by overlapping cells and poor imaging quality. In this paper we compare between two convolutional neural networks that will segment the cells as a first phase, then count them in the second phase using 3 diffrent algorithms (Watershed, Connected Component Labeling et Circle Hough Transform).
-
-\end{changemargin}
-
-\vspace{1in}
-
-\begin{changemargin}{0.9cm}{0.9cm}
-Keywords: CNN, cell segmentation, cell counting, convolutional neural networks
-\end{changemargin}
+\input{resume.tex}
 
 \newpage
 
